# augmented-audio

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .last_build_id  Cargo.toml  Dockerfile  LICENSE  LICENSE_PREAMBLE  Pipfile  README.md  about.hbs  about.toml  domain-lingo.dic  flutter_service_worker.js  index.html  lerna.json  main.dart.js  manifest.json  melos.yaml  package-lock.json  package.json  pubspec.yaml  script.sh  spellcheck.toml  submodules.json  turbo.json  version.json
crates/adsr-envelope/: Cargo.toml
crates/adsr-envelope/src/: lib.rs
crates/apps/daw/: .gitignore  Cargo.toml  LICENSE_PREAMBLE  Makefile  README.md  analysis_options.yaml  pubspec.yaml
crates/apps/daw/examples/: create_example_project.rs  start_graph_and_get_volume.rs
crates/apps/daw/lib/: bridge_generated.dart  main.dart
crates/apps/daw/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  graph.rs  lib.rs
crates/apps/daw/test/: widget_test.dart
crates/apps/daw/web/: index.html
crates/apps/demo-plugin/: Cargo.toml  README.md
crates/apps/demo-plugin/src/: lib.rs  processor.rs  view.rs
crates/audio-parameter-store/: Cargo.toml
crates/audio-parameter-store/src/: lib.rs  parameter.rs
crates/audio-plugin-logger/: Cargo.toml
crates/audio-plugin-logger/src/: lib.rs  logging.rs
crates/audio-processor-iced-design-system/: Cargo.toml  README.md
crates/audio-processor-iced-design-system/examples/: line_chart.rs  walk_through.rs
crates/audio-processor-iced-design-system/src/: charts.rs  colors.rs  container.rs  knob.rs  lib.rs  menu_list.rs  router.rs  spacing.rs  style.rs  tree_view.rs
crates/audio-processor-iced-storybook/: Cargo.toml  README.md
crates/audio-processor-iced-storybook/examples/: gradient.rs
crates/audio-processor-iced-storybook/src/: lib.rs  model.rs
crates/audio-processor-iced-storybook/src/sidebar/: mod.rs
crates/audio-processor-standalone/: Cargo.toml
crates/audio-processor-standalone-midi/: Cargo.toml  README.md
crates/audio-processor-standalone-midi/src/: audio_thread.rs  constants.rs  host.rs  lib.rs  vst.rs
crates/audio-processor-standalone/examples/: mono_right_processor.rs  simple_delay_processor.rs  standalone_feedback.rs
crates/audio-processor-standalone/src/: lib.rs
crates/audio-processor-traits/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/audio-processor-traits/benches/: audio_processor_traits_criterion.rs
crates/audio-processor-traits/src/: audio_buffer.rs  lib.rs  midi.rs
crates/augmented-dev-cli/: Cargo.toml  README.md
crates/augmented-dev-cli/src/: main.rs  manifests.rs
crates/background-garbage-collector/: Cargo.toml  README.md
crates/background-garbage-collector/src/: atomic_queue.rs  barrier.rs  bounded_queue.rs  collector.rs  double_checked_locking.rs  lib.rs  lock_free_producer_queue.rs  queue.rs  shared.rs
crates/convert-sample-rate/: Cargo.toml  README.md
crates/convert-sample-rate/src/: lib.rs
crates/example-iced-audio-viz/: Cargo.toml  README.md
crates/example-iced-audio-viz/src/: buffer_analyser.rs  lib.rs  main.rs  volume_analyser.rs
crates/example-iced-xcode-integration/: Cargo.toml
crates/example-iced-xcode-integration/example iced xcode integration/example iced xcode integration/: AppDelegate.h  AppDelegate.m  ViewController.m  rust_bridge.h
crates/example-iced-xcode-integration/src/macos/: mod.rs
crates/example-midi-host/: Cargo.toml  README.md
crates/example-midi-host/src/: main.rs
crates/example-midi-host/src/midi_host/: mod.rs
crates/generic-parameters-editor/: Cargo.toml  README.md
crates/generic-parameters-editor/src/: lib.rs  protocol.rs
crates/generic-parameters-editor/src/handlers/: mod.rs
crates/iced-editor/: Cargo.toml
crates/iced-editor/src/: lib.rs  plugin_window.rs
crates/looper-processor/: Cargo.toml
crates/looper-processor/src/: buffer.rs  handle.rs  lib.rs  main.rs
crates/looper-vst/: Cargo.toml
crates/looper-vst/src/: lib.rs
crates/looper-vst/src/config/: logging.rs  mod.rs
crates/looper-vst/src/ui/: mod.rs  style.rs
crates/oscillator/: Cargo.toml
crates/oscillator/benches/: sine_oscillator_benchmark.rs
crates/oscillator/src/: lib.rs
crates/oscillator/src/generators/: mod.rs
crates/plugin-host-gui2/: Cargo.toml  LICENSE  README.md  build.rs
crates/plugin-host-gui2/benches/: plugin_host_gui_criterion.rs
crates/plugin-host-gui2/examples/: canvas_tesselation.rs  storybook.rs
crates/plugin-host-gui2/src/: executor.rs  lib.rs  main.rs  utils.rs
crates/plugin-host-gui2/src/services/: host_options_service.rs  mod.rs  plugin_file_watch.rs
crates/plugin-host-gui2/src/ui/: mod.rs  start_error_view.rs
crates/plugin-host-lib/: Cargo.toml
crates/plugin-host-lib/benches/: plugin_host_lib_criterion.rs  rms_processor_benchmark.rs
crates/plugin-host-lib/benches/cpal_buffer_conversion/: mod.rs
crates/plugin-host-lib/benches/rms/: mod.rs
crates/plugin-host-lib/src/: lib.rs  timer.rs
crates/plugin-host-lib/src/audio_io/: cpal_vst_buffer_handler.rs  garbage_collector.rs  mod.rs  responses.rs  test_plugin_host.rs
crates/plugin-host-lib/src/commands/: list_devices.rs
crates/plugin-host-lib/src/processors/: audio_file_processor.rs  buffer_collector_processor.rs  mod.rs  output_file_processor.rs  running_rms_processor.rs  shared_processor.rs  test_host_processor.rs  volume_meter_processor.rs  vst_midi_converter.rs
crates/plugin-host-lib/src/vst_host/: mod.rs
crates/synth/: Cargo.toml
crates/synth/src/: lib.rs  voice.rs
crates/synth/src/filter/: mod.rs  pole_filter.rs  rbj.rs
crates/test-plugin-host/: Cargo.toml  README.md
crates/test-plugin-host/src/: main.rs
crates/test-plugin-host/src/commands/: main.rs  (+1 more)
crates/tremolo-plugin/: Cargo.toml  README.md  build.sh
crates/tremolo-plugin/src/: constants.rs  lib.rs  plugin_parameter.rs  processor.rs
crates/webview-holder/: Cargo.toml
crates/webview-holder/src/: lib.rs
crates/webview-transport/: Cargo.toml
crates/webview-transport/src/: lib.rs  transport.rs
crates/wisual-logger/: Cargo.toml  README.md
crates/wisual-logger/src/: lib.rs
(+1721 files in other folders)
