[workspace]
members = [
  # Applications & Plug-ins
  "crates/apps/looper/looper-processor",
  "crates/apps/looper/looper-vst",
  "crates/apps/plugin-host/plugin-host-cli",
  "crates/apps/plugin-host/plugin-host-gui2",
  "crates/apps/plugin-host/plugin-host-lib",
  "crates/apps/synth",
  "crates/apps/tremolo-plugin",

  # Repository scripts
  "crates/scripts/autosync-submodules",
  "crates/scripts/midi-logger-host",

  # Demos & Experiments
  "crates/spikes/example-iced-audio-viz",
  "crates/spikes/example-iced-xcode-integration",

  # Augmented framework
  "crates/augmented/augmented",
  # Augmented components
  "crates/augmented/application/audio-processor-standalone",
  "crates/augmented/application/audio-processor-standalone-midi",
  "crates/augmented/audio/adsr-envelope",
  "crates/augmented/audio/audio-garbage-collector",
  "crates/augmented/audio/audio-garbage-collector-v2",
  "crates/augmented/audio/audio-parameter-store",
  "crates/augmented/audio/audio-processor-graph",
  "crates/augmented/audio/audio-processor-traits",
  "crates/augmented/audio/audio-processor-utility",
  "crates/augmented/audio/audiounit",
  "crates/augmented/audio/oscillator",
  "crates/augmented/data/atomic-queue",
  "crates/augmented/data/audio-volume",
  "crates/augmented/data/circular-data-structures",
  "crates/augmented/development/augmented-dev-cli",
  "crates/augmented/development/bundler",
  "crates/augmented/dsp/convert-sample-rate",
  "crates/augmented/dsp/dsp-filters",
  "crates/augmented/gui/audio-processor-iced-design-system",
  "crates/augmented/gui/audio-processor-iced-storybook",
  "crates/augmented/gui/darwin-webkit",
  "crates/augmented/gui/generic-parameters-editor",
  "crates/augmented/gui/iced-editor",
  "crates/augmented/gui/macos-bundle-resources",
  "crates/augmented/gui/webview-holder",
  "crates/augmented/gui/webview-transport",
  "crates/augmented/ops/audio-plugin-logger",
  "crates/augmented/ops/augmented-analytics",
  "crates/augmented/ops/wisual-logger",
]

exclude = [
  "crates/augmented",
  "crates/apps",
  "crates/augmented/gui/darwin-webkit",
  "crates/libloading",
  "crates/scripts",
  "crates/spikes",
  "crates/vendor",
]

[profile.bench]
debug = true

[patch.crates-io]
wisual-logger = { path = "crates/augmented/ops/wisual-logger" }

# Vendor overrides
basedrop = { path = "./crates/vendor/basedrop" }
gfx-backend-metal = { version = "*", path = "./crates/vendor/gfx/src/backend/metal", features = ["cross"] }
gfx-hal = { path = "./crates/vendor/gfx/src/hal" }
iced = { version = "^0.3.0", path = "./crates/vendor/iced" }
libloading = { path = "./crates/vendor/libloading" }
lyon_tessellation = { path = "./crates/vendor/lyon/crates/tessellation", features = ["profiling"] }
pathfinder_canvas = { path = "./crates/vendor/pathfinder/canvas" }
vst = { path = "./crates/vendor/vst" }