[workspace]
resolver = "2"
members = [
    # Applications & Plug-ins
    "crates/apps/looper/looper-processor",
    "crates/apps/looper/looper-vst",
    "crates/apps/plugin-host/plugin-host-cli",
    "crates/apps/plugin-host/plugin-host-gui2",
    "crates/apps/plugin-host/plugin-host-lib",
    "crates/apps/synth",
    "crates/apps/tremolo-plugin",
    "crates/apps/recording_buddy",
    "crates/apps/demo-plugin",
    "crates/apps/metronome",
    "crates/apps/daw",
    # Repository scripts
    "crates/scripts/autosync-submodules",
    "crates/scripts/midi-logger-host",
    # Demos & Experiments
    "crates/spikes/example-iced-audio-viz",
    "crates/spikes/example-iced-xcode-integration",

    # Augmented framework
    "crates/augmented/augmented",
    # Augmented components
    "crates/augmented/application/audio-processor-standalone",
    "crates/augmented/application/audio-processor-standalone-midi",
    "crates/augmented/audio/adsr-envelope",
    "crates/augmented/audio/audio-garbage-collector",
    "crates/augmented/audio/audio-garbage-collector-v2",
    "crates/augmented/audio/audio-parameter-store",
    "crates/augmented/audio/audio-processor-analysis",
    "crates/augmented/audio/audio-processor-graph",
    "crates/augmented/audio/audio-processor-traits",
    "crates/augmented/audio/audio-processor-traits-derive",
    "crates/augmented/audio/audio-processor-utility",
    "crates/augmented/audio/audio-processor-file",
    "crates/augmented/audio/audio-processor-time",
    "crates/augmented/audio/audio-processor-bitcrusher",
    "crates/augmented/audio/audiounit",
    "crates/augmented/audio/avfaudio-sys",
    "crates/augmented/audio/oscillator",
    "crates/augmented/audio/lame-mp3",
    "crates/augmented/data/atomic-queue",
    "crates/augmented/data/atomics",
    "crates/augmented/data/augmented-playhead",
    "crates/augmented/data/augmented-midi",
    "crates/augmented/data/audio-volume",
    "crates/augmented/data/circular-data-structures",
    "crates/augmented/development/augmented-dev-cli",
    "crates/augmented/development/bundler",
    "crates/augmented/dsp/convert-sample-rate",
    "crates/augmented/dsp/dsp-filters",
    "crates/augmented/gui/audio-processor-iced-design-system",
    "crates/augmented/gui/audio-settings-gui",
    "crates/augmented/gui/audio-processor-iced-storybook",
    "crates/augmented/gui/darwin-webkit",
    "crates/augmented/gui/generic-parameters-editor",
    "crates/augmented/gui/iced-editor",
    "crates/augmented/gui/macos-bundle-resources",
    "crates/augmented/gui/webview-holder",
    "crates/augmented/gui/webview-transport",
    "crates/augmented/ops/audio-plugin-logger",
    "crates/augmented/ops/augmented-analytics",
    "crates/augmented/ops/augmented-metrics",
    "crates/augmented/ops/wisual-logger",
]

exclude = [
  "crates/augmented",
  "crates/apps",
  "crates/augmented/gui/darwin-webkit",
  "crates/libloading",
  "crates/scripts",
  "crates/spikes",
  "crates/vendor",
]

[profile.bench]
debug = true

[patch.crates-io]
wisual-logger = { version = "0.1", path = "crates/augmented/ops/wisual-logger" }

# Vendor overrides
iced = { version = "^0.3.0", path = "./crates/vendor/iced" }
vst = { path = "./crates/vendor/vst" }
