[package]
name = "audio-parameter-store"
description = "A simple parameters representation for audio plugins"
version = "0.1.0"
authors = ["yamadapc <tacla.yamada@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam = "^0.8.1"
serde = { version = "1.0.126", features = ["derive"] }
vst = { git = "https://github.com/rustaudio/vst-rs", rev = "a398697b0214129720af2480e98f1abf7beecfce" }
