[package]
name = "audio-processor-iced-design-system"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wgpu = ["iced/tokio", "iced/wgpu", "iced/canvas"]
glow = ["iced/tokio", "iced/glow", "iced/glow_canvas"]

[dependencies]
iced = { path = "../iced", version = "^0.3.0" }
iced_native = { path = "../iced/native" }
iced_graphics = { path = "../iced/graphics" }
iced_audio = { version = "^0.7.0", path = "../iced_audio" }
iced_style = { path = "../iced/style" }
log = "^0.4.14"

[dev-dependencies]
wisual-logger = { version = "^0.1", path = "../wisual-logger" }