[package]
name = "audio-processor-iced-design-system"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wgpu = ["iced/tokio", "iced/wgpu", "iced/canvas"]
glow = ["iced/tokio", "iced/glow", "iced/glow_canvas"]

[dependencies]
log = "^0.4.14"

[dependencies.iced_style]
path = "../vendor/iced/style"
default-features = false

[dependencies.iced_audio]
version = "^0.7.0"
path = "../vendor/iced_audio"
default-features = false

[dependencies.iced_graphics]
path = "../vendor/iced/graphics"
default-features = false

[dependencies.iced_native]
path = "../vendor/iced/native"
default-features = false

[dependencies.iced]
path = "../vendor/iced"
version = "^0.3.0"
default-features = false

[dev-dependencies]
wisual-logger = { version = "^0.1", path = "../wisual-logger" }