[package]
name = "audio-processor-iced-storybook"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "^0.3.0"
log = "^0.4.14"
wisual-logger = "^0.1.3"
audio-processor-iced-design-system = { path = "../audio-processor-iced-design-system" }