[package]
name = "audio-processor-iced-storybook"
version = "0.1.0"
edition = "2018"

[features]
default = []
wgpu = [
    "iced/wgpu",
    "audio-processor-iced-design-system/wgpu",
]
glow = [
    "iced/glow",
    "audio-processor-iced-design-system/glow",
]

[dependencies]
iced = { version = "^0.3.0", path = "../iced" }
log = "^0.4.14"
wisual-logger = "^0.1.3"
audio-processor-iced-design-system = { path = "../audio-processor-iced-design-system" }