[package]
name = "audio-processor-standalone-midi"
version = "0.1.1"
edition = "2018"
description = "Stand-alone MIDI hosting for a VST host or an `audio-processor-traits` implementor"
license = "MIT"
homepage = "https://github.com/yamadapc/augmented-audio"
repository = "https://github.com/yamadapc/augmented-audio"

[dependencies]
basedrop = "^0.1.2"
thiserror = "^1.0.26"
midir = "^0.7.0"
vst = { version = "^0.2.1", path = "../vendor/vst" }
atomic-queue = { version = "^0.1", path = "../atomic-queue" }
log = "^0.4.14"
audio-processor-traits = { version = "^0.3", path = "../augmented/audio/audio-processor-traits" }
