[package]
name = "audio-processor-standalone"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio-processor-traits = { path = "../audio-processor-traits" }
cpal = "^0.13.3"
log = "^0.4.14"
wisual-logger = "^0.1.2"
ringbuf = "^0.2.5"