[package]
name = "audio-processor-traits"
version = "0.1.0"
authors = ["yamadapc <tacla.yamada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vst_support"]
vst_support = ["vst"]

[dependencies]
num = "^0.4.0"
vst = { version = "^0.2.1", optional = true }