[package]
name = "audio-processor-traits"
description = "Traits for audio processor types and audio buffer types. Heavily subject to change."
version = "0.2.0"
authors = ["yamadapc <tacla.yamada@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/yamadapc/augmented-audio"
repository = "https://github.com/yamadapc/augmented-audio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vst_support"]
vst_support = ["vst"]

[dependencies]
num = "^0.4.0"
vst = { path = "../vst", optional = true }
