[package]
name = "augmented-dev-cli"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "^3.0.0-beta.2"
log = "^0.4.14"
wisual-logger = { version = "^0.1.3", path = "../wisual-logger" }
cmd_lib = "^1.1.0"
serde_json = "^1.0"
chrono = "0.4"
serde = { version = "^1.0", features = [ "derive" ] }
toml = "^0.5.8"
urlencoding = "2.1.0"
plist = "^1.1.0"
mockall = "0.10.2"
