[package]
name = "background-garbage-collector"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circular-data-structures = { path = "../circular-data-structures" }

[dev-dependencies]
log = "^0.4.14"
wisual-logger = "^0.1.2"
rand = "^0.8.4"