[package]
name = "example-iced-audio-viz"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { path = "../iced", version = "^0.3.0", features = ["tokio", "canvas"] }
basedrop = "^0.1.2"
log = "^0.4.14"
cpal = { version = "^0.13.3", path = "../cpal" }
vst = { path = "../vst" }

audio-processor-standalone = { path = "../audio-processor-standalone" }
audio-garbage-collector = { path = "../audio-garbage-collector" }
atomic-queue = { path = "../atomic-queue" }
circular-data-structures = { path = "../circular-data-structures" }
audio-processor-traits = { version = "^0.3", path = "../audio-processor-traits" }