[package]
name = "iced-editor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "^0.3.0", path = "../iced", features = ["glow", "glow_canvas", "tokio"] }
log = "^0.4.14"
vst = { path = "../vst" }
wisual-logger = { path = "../wisual-logger" }

baseview = { path = "../baseview" }
iced_baseview = { path = "../iced-baseview", features = ["glow", "glow_canvas", "tokio"], default-features = false }
raw-window-handle = "^0.3.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "^0.2.7"
cocoa = "^0.24.0"
