[package]
name = "iced-editor"
version = "0.1.0"
edition = "2018"

[features]
default = ["glow"]
glow = ["iced/glow", "iced/glow_canvas", "iced_baseview/glow", "iced_baseview/glow_canvas"]
wgpu = ["iced/wgpu", "iced/canvas", "iced_baseview/canvas", "iced_baseview/wgpu"]

[dependencies]
iced = { version = "^0.3.0", path = "../iced", features = ["tokio"] }
log = "^0.4.14"
vst = { path = "../vst" }
wisual-logger = { path = "../wisual-logger" }

baseview = { path = "../baseview" }
iced_baseview = { path = "../iced-baseview", features = ["tokio"], default-features = false }
raw-window-handle = "^0.3.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "^0.2.7"
cocoa = "^0.24.0"
