[package]
name = "iced-editor"
version = "0.1.0"
edition = "2018"

[features]
default = ["glow", "tokio"]
tokio = ["iced_baseview/tokio", "iced/tokio"]
glow = ["iced/glow", "iced/glow_canvas", "iced_baseview/glow", "iced_baseview/glow_canvas"]
wgpu = ["iced/wgpu", "iced/canvas", "iced_baseview/canvas", "iced_baseview/wgpu"]

[dependencies]
iced = { version = "^0.3.0", path = "../vendor/iced", default-features = false }
log = "^0.4.14"
vst = { path = "../vendor/vst" }
wisual-logger = { path = "../wisual-logger" }

baseview = { path = "../vendor/baseview" }
iced_baseview = { path = "../vendor/iced-baseview", default-features = false }
raw-window-handle = "^0.3.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "^0.2.7"
cocoa = "^0.24.0"
