[package]
name = "looper-processor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circular-data-structures = { path = "../circular-data-structures" }
audio-processor-traits = { version = "^0.1.0", path = "../audio-processor-traits" }
log = "^0.4.14"
basedrop = "^0.1.2"
num = "^0.4.0"

[dev-dependencies]
audio-processor-testing-helpers = { path = "../audio-processor-testing-helpers" }