[package]
name = "looper-processor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4.14"
basedrop = "^0.1.2"
num = "^0.4.0"

audio-garbage-collector = { version = "^0.1.0", path = "../audio-garbage-collector" }
audio-processor-standalone = { version = "^0.1.0", path = "../audio-processor-standalone" }
audio-processor-traits = { version = "^0.2.0", path = "../audio-processor-traits" }
circular-data-structures = { path = "../circular-data-structures" }
wisual-logger = { path = "../wisual-logger" }
rimd = "^0.0.1"

[dev-dependencies]
audio-processor-testing-helpers = { path = "../audio-processor-testing-helpers" }