[package]
name = "looper-vst"
version = "0.1.0"
edition = "2018"
description = "A looper VST effect"

[features]
default = [
    "wgpu",
    "iced/tokio",
    "iced_baseview/tokio",
]
wgpu = [
    "iced/wgpu",
    "iced_baseview/wgpu",
    "iced/canvas",
    "iced_baseview/canvas",
    "audio-processor-iced-design-system/wgpu",
    "iced-editor/wgpu"
]

[dependencies]
log = "^0.4.14"

vst = { path = "../vst" }
log4rs = { version = "^1.0.0", features = ["rolling_file_appender", "compound_policy", "size_trigger"] }
dirs = "^3.0.2"
thiserror = "^1.0.25"

audio-processor-iced-design-system = { path = "../audio-processor-iced-design-system" }
iced = { version = "^0.3.0", path = "../iced" }
iced_audio = { path = "../iced_audio" }
iced_baseview = { path = "../iced-baseview" }
iced-editor = { path = "../iced-editor" }

audio-garbage-collector = { path = "../audio-garbage-collector" }
audio-parameter-store = { path = "../audio-parameter-store" }
audio-processor-traits = { version = "^0.3", path = "../audio-processor-traits" }
audio-plugin-logger = { path = "../audio-plugin-logger" }
looper-processor = { path = "../looper-processor" }

[lib]
name = "loopi"
crate-type = ["cdylib"]

[package.metadata.bundle]
name = "Loopi"
identifier = "com.beijaflor.Loopi"

[package.metadata.bundle.macos.properties]
CFBundleGetInfoString = "vst"
