[package]
name = "oscillator"
version = "0.1.0"
authors = ["yamadapc <tacla.yamada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "^0.13.3"

[dev-dependencies]
criterion = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
plotters = { version = "^0.3.1", path = "../plotters" }

[[bench]]
name = "sine_oscillator_benchmark"
harness = false
