[package]
name = "plugin-host-gui2"
version = "0.1.0"
edition = "2018"

[dependencies]
dirs = "^3.0.2"
log = "^0.4.14"
tinyfiledialogs = "^3.0"
thiserror = "^1.0.25"
serde = { version = "^1.0.126", features = ["derive"] }
serde_json = "^1.0.64"
vst = { git = "https://github.com/rustaudio/vst-rs", rev = "a398697b0214129720af2480e98f1abf7beecfce" }
baseview = { path = "../baseview" }
raw-window-handle = "0.3.3"
cocoa = "^0.24.0"
objc = "^0.2.7"

tokio = "^1.8.1"
audio-processor-iced-design-system = { path = "../audio-processor-iced-design-system" }
iced = { version = "^0.3.0", path = "../iced" }
plugin-host-lib = { path = "../plugin-host-lib" }
wisual-logger = { path = "../wisual-logger" }