[package]
name = "plugin-host-gui2"
version = "0.1.0"
edition = "2018"

[dependencies]
dirs = "^3.0.2"
log = "^0.4.14"
tinyfiledialogs = "^3.0"
thiserror = "^1.0.25"
serde = { version = "^1.0.126", features = ["derive"] }
serde_json = "^1.0.64"
vst = { path = "../vst" }
baseview = { path = "../baseview" }
raw-window-handle = "0.3.3"
derive_more = "^0.99.16"
uuid = { version = "^0.8", features = ["v4"] }
notify = "^4.0.17"
md5 = "^0.7.0"
derivative = "^2.2.0"
opener = "^0.5.0"

tokio = "^1.8.1"
audio-processor-traits = { version = "^0.3", path = "../audio-processor-traits" }
audio-garbage-collector = { path = "../audio-garbage-collector" }
audio-processor-iced-storybook = { path = "../audio-processor-iced-storybook" }
audio-processor-iced-design-system = { path = "../audio-processor-iced-design-system" }
iced = { version = "^0.3.0", path = "../iced", features = ["debug", "glow", "glow_canvas"] }
iced_core = { version = "^0.4", path = "../iced/core" }
iced_native = { version = "^0.4", path = "../iced/native" }
iced_futures = { version = "^0.3", path = "../iced/futures" }
plugin-host-lib = { path = "../plugin-host-lib" }
wisual-logger = { path = "../wisual-logger" }

[dev-dependencies]
criterion = { version = "^0.3.4", features = ["html_reports"] }
oscillator = { path = "../oscillator" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "^0.24.0"
objc = "^0.2.7"

[features]
default = ["story"]
glow = ["iced/glow", "iced/glow_canvas"]
story = []

[[bench]]
name = "plugin_host_gui_criterion"
harness = false
