[package]
name = "plugin-host-lib"
version = "0.1.0"
authors = ["yamadapc <tacla.yamada@gmail.com>"]
edition = "2018"

[dependencies]
basedrop = "^0.1.2"
serde = { version = "^1.0.64", features = ["derive"] }
serde_json = "^1.0.64"
cpal = { version = "^0.13.3", path = "../cpal" }
clap = "^2.33.3"
tao = "^0.2.6"
log = "^0.4.14"
rayon = "^1.5.1"
symphonia-bundle-mp3 = "^0.2.0"
symphonia = { version = "^0.2.0", features = ["mp3", "wav", "flac", "isomp4", "aac"] }
num-traits = "^0.2.14"
wisual-logger = "^0.1.2"
midir = "^0.7.0"
thiserror = "^1.0.25"
rimd = "^0.0.1"
concread = "^0.2.14"
notify = "^4.0.17"
md5 = "^0.7.0"
vst = { path = "../vst" }
hound = "^3.4.0"
ringbuf = "^0.2.5"
uuid = { version = "^0.8.2", features = [ "v4" ] }

atomic-queue = { path = "../atomic-queue" }
audio-processor-standalone-midi = { path = "../audio-processor-standalone-midi" }
audio-garbage-collector = { path = "../audio-garbage-collector" }
circular-data-structures = { path = "../circular-data-structures" }
audio-processor-traits = { version = "^0.3", path = "../audio-processor-traits" }
oscillator = { path = "../oscillator" }
convert-sample-rate = { path = "../convert-sample-rate" }

[dev-dependencies]
criterion = { version = "^0.3.4", features = ["html_reports"] }

[[bench]]
name = "plugin_host_lib_criterion"
harness = false
