[package]
name = "synth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio-garbage-collector = { version = "^0.1.0", path = "../augmented/audio/audio-garbage-collector" }
audio-processor-traits = { version = "^0.3", path = "../augmented/audio/audio-processor-traits" }
adsr-envelope = { version = "^0.1.0", path = "../augmented/audio/adsr-envelope" }
oscillator = { version = "^0.1.0", path = "../augmented/audio/oscillator" }
audio-processor-standalone = { version = "^0.1.0", path = "../augmented/application/audio-processor-standalone" }
num = "^0.4.0"
rimd = "^0.0.1"
log = "^0.4.14"
wisual-logger = { version = "^0.1", path = "../wisual-logger" }
dsp-filters = { path = "../augmented/dsp/dsp-filters" }
pitch_calc = "^0.12.0"