[package]
name = "test-plugin-host"
version = "0.1.0"
authors = ["yamadapc <tacla.yamada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.2.1"
cpal = "0.13.3"
clap = "2.33.3"
tao = "0.2.6"
log = "0.4.14"
oscillator = { path = "../oscillator" }
num-traits = "0.2.14"