[package]
name = "test-plugin-host"
version = "0.1.0"
authors = ["yamadapc <tacla.yamada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wisual-logger = "^0.1.2"
plugin-host-lib = { path = "../plugin-host-lib" }
clap = "^2.33.3"
