[package]
name = "tas_v2"
version = "0.0.1"
authors = ["Pedro Tacla Yamada <tacla.yamada@gmail.com>"]

[dependencies]
vst = { git = "https://github.com/rustaudio/vst-rs" }
cocoa = "0.18.4"
objc = "0.2.7"
crossbeam = "0.8.0"
darwin-webkit = "0.1.3"
env_logger = "0.8.1"
log = "0.4.11"
serde = { version = "1.0.126", features = ["derive"] }
dirs = "3.0.2"
log4rs = "1.0.0"
serde_json = "1.0.64"
tungstenite = "0.13.0"

oscillator = { path = "../oscillator" }
wisual-logger = { path = "../wisual-logger" }

[lib]
name = "tas_v2"
crate-type = ["cdylib"]
