[package]
name = "tas_v2"
description = "TasV2 Tremolo Audio Plug-in"
version = "0.0.1"
authors = ["Pedro Tacla Yamada <tacla.yamada@gmail.com>"]
edition = "2018"

[dependencies]
vst = { git = "https://github.com/rustaudio/vst-rs", rev = "a398697b0214129720af2480e98f1abf7beecfce" }
cocoa = "^0.18.4"
objc = "^0.2.7"
crossbeam = "^0.8.0"
darwin-webkit = "^0.1.3"
env_logger = "^0.8.1"
log = "^0.4.11"
serde = { version = "^1.0.126", features = ["derive"] }
dirs = "^3.0.2"
log4rs = { version = "^1.0.0", features = ["rolling_file_appender", "compound_policy", "size_trigger"] }
tokio = { version = "^1.6.0", features = ["rt", "macros", "sync", "time", "rt-multi-thread"] }
futures-util = "^0.3.15"
tokio-tungstenite = "^0.14.0"
serde_json = "^1.0.64"
tungstenite = "^0.13.0"
async-trait = "^0.1.50"
thiserror = "^1.0.25"

macos-bundle-resources = { path = "../macos-bundle-resources" }
webview-holder = { path = "../webview-holder" }
webview-transport = { path = "../webview-transport" }
audio-parameter-store = { path = "../audio-parameter-store" }
oscillator = { path = "../oscillator" }
wisual-logger = "^0.1.2"

[lib]
name = "tas_v2"
crate-type = ["cdylib"]

[package.metadata.bundle]
name = "TasV2"
identifier = "com.beijaflor.TasV2"

[package.metadata.bundle.macos.properties]
CFBundleGetInfoString = "vst"